# dap

./: .gitignore  LICENSE  README.md  pyproject.toml
dap/: __init__.py  arrangement.py  build.py  demo.py  functors.py  gyroscope.py  gyroscope_faithful.py  integrator.py  interpretation.py  leapfrog.py  learning.py  org.py  org2.py  orgK.py  pinn.py  polynomial.py  rk4.py  rvect.py  system_id.py  wiring.py
dap/tests/: test_composition.py  test_covector_field.py  test_drag_one_form.py  test_faithful_machine.py  test_faithful_physics.py  test_functors.py  test_gradient_descent.py  test_graph_laplacian.py  test_gyroscope.py  test_heat_equation.py  test_klein_gordon.py  test_leapfrog.py  test_newton.py  test_optimizers.py  test_org2.py  test_orgk.py  test_pinn.py  test_polynomial.py  test_rk4_gyro.py  test_rvect.py  test_system_id.py  test_vector_graph.py  test_wave_equation.py  test_wiring.py
